--- a/hobbies.html
+++ b/hobbies.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     
-    <h3>My name is </h3> <h2>Mohamed Fazil</h2>
+    <h2>Mohamed Fazil</h2>
     <p>I am a Kalvium student</p>
     <h2 class="hobbies"><u>My Hobbies</u></h2>
     <ol>
