--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="header-text flex space-evenly direction-column">
         <h1><u>About Me</u></h1>
         <img class="profilepic" src="IMG_0135.JPG" alt="">
-        <h3 class="me"><b>Hey Everyone! I'm Mohamed Fazil and I am a Proud Kalvian Student studying B.Tech CSE at Lovely Professional University,Punjab. I am an aspiring Fullstack Developer and I hope to make a change in this always adapting and changing environment!</b></h3>
+        <h3 class="me"><b>Hey Everyone! I'm Mohamed Fazil and I am a Proud Kalvium Student studying B.Tech CSE at Lovely Professional University,Punjab. I am an aspiring Fullstack Developer and I hope to make a change in this always adapting and changing environment!</b></h3>
         </h3>
     </header>
     <div id="hobbies">
